--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,12 @@
         <scope>compile</scope>
     </dependency>
     <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>jsp-api</artifactId>
+        <version>2.0</version>
+        <optional>true</optional>
+    </dependency>
+    <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
         <version>1.7.5</version>
